--- a/2105.04545/branching1.tex
+++ b/2105.04545/branching1.tex
@@ -1,7 +1,50 @@
-\documentclass[twocolumn,amsmath,amssymb]{revtex4-1}
+\documentclass[12pt,amsmath,amssymb,onecolumn]{revtex4-2}
 \usepackage{graphicx}% Include figure files
 \usepackage{dcolumn}% Align table columns on decimal point
 \usepackage{bm}% bold math
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 %\numberwithin{equation}{section}
 
@@ -34,6 +77,8 @@ The value of $b$ is, in principle, accessible to experiment.
 %\pacs{03.65.Ca, 02.30.Cj, 03.65.Ta}
 
 \maketitle
+\newpage
+
 \section{\label{sec:intro}Introduction}
 
 Microscopic particles have wave functions spread over all possible positions. 
@@ -279,11 +324,10 @@ According to this proposal, the system-meter combination should not be considere
 but instead an account is required of the rest of the macroscopic environment with which the meter can interact.
 When the value of a macroscopic meter is changed by recording the value of a microscopic coordinate, the meter's new state
 rapidly becomes entangled with a large number of other degrees of freedom in the environment 
-\begin{multline}
+\begin{equation}
 \label{entangled}
-(\alpha |s_1 \rangle  |m_1 \rangle  + \beta |s_2 \rangle  |m_2 \rangle ) |e_0 \rangle  \rightarrow \\
-\alpha|s_1 \rangle  |m_1 \rangle  |e_1 \rangle  +  \beta |s_2 \rangle  |m_2 \rangle  |e_2 \rangle . 
-\end{multline}
+(\alpha |s_1 \rangle  |m_1 \rangle  + \beta |s_2 \rangle  |m_2 \rangle ) |e_0 \rangle  \quad \rightarrow \quad \alpha|s_1 \rangle  |m_1 \rangle  |e_1 \rangle  +  \beta |s_2 \rangle  |m_2 \rangle  |e_2 \rangle . 
+\end{equation}
 For a particular choice of bases for system, meter and environment, determined by the combined system's dynamics, entanglement
 of the meter with the environment proceeds as quickly as possible,
 $| e_1 \rangle $ and $| e_2 \rangle $ almost do not mix in the course of further time development,
@@ -5872,15 +5916,15 @@ The expression on the right-hand side of Eq. (\ref{combined}) can then be obtain
 commutator between an operator $k \in \mathcal{F}_{(p-1) p}$ and
 an operator $g \in L_{(p-1) m}$ for $m = n - n_{\upsilon}$.
 For 2 x 2 traceless Hermitian $k_{ij}$, define
-\begin{multline}
+\begin{equation}
 \label{kinpminus1p}
 k = \sum_{ij} |\phi_i \rangle  \langle \phi_j| k_{ij} \otimes |\upsilon \rangle  \langle \upsilon| \bigotimes_{q \ne p-1, p} I_q,
-\end{multline}
+\end{equation}
 and for a 2 x 2 traceless Hermitian $g_{ij}$, define
-\begin{multline}
+\begin{equation}
 \label{ginl}
 g  =  |\chi \rangle  \langle \chi| \otimes \sum_{ij} |\phi_i \rangle  \langle \phi_j| g_{ij} \bigotimes_{q > p-1} I_q.
-\end{multline}
+\end{equation}
 For any traceless, Hermitian 2 x 2 $h_{ij}$, there are $k_{ij}$ and $g_{ij}$ 
 such that
 \begin{equation}
@@ -6176,12 +6220,12 @@ Define $|\omega(\nu)^B \rangle $ to be
 |\omega^B( \nu) \rangle  = U_{k^B}(\nu)|\omega^B \rangle.
 \end{equation}
 for a product state $|\omega^B(0) \rangle  \in \mathcal{H}^B$
-\begin{multline}
+\begin{equation}
 \label{productstate2}
 |\omega^B(0) \rangle  =
-d_f( p_{j - 1}) ... d_f( p_0)   d_{\bar{f}}( q_{k - 1}) ... d_{\bar{f}}( q_0) \times \\
+d_f( p_{j - 1}) ... d_f( p_0)   d_{\bar{f}}( q_{k - 1}) ... d_{\bar{f}}( q_0) \times
   d_b( r_{\ell-1}) ... d_b( r_0)  |\Omega^B \rangle ,
-\end{multline}
+\end{equation}
 with $j$ fermions, $k$ anti-fermions, and $\ell$ bosons,
 Assume that $|\omega^B(0) \rangle$ and $k^B(\nu)$ have been chosen
 to give
@@ -6264,11 +6308,11 @@ In addition, while $|\omega^B(\nu) \rangle $ is an eigenvector
 of $N^B$ with eigenvalue $n$, $|\omega^D(\nu) \rangle $ is an eigenvector
 of $N^B$ with eigenvalue 0 and of $N^C$ with eigenvalue $n$.
 Eq. (\ref{normkd}) implies
-\begin{multline}
+\begin{equation}
   \label{complexityd}
-  C^D[ |\omega^D(1) \rangle , |\omega^D( 0) \rangle ] \le \\
+  C^D[ |\omega^D(1) \rangle , |\omega^D( 0) \rangle ] \le
   9 C^B[ |\omega^B(1) \rangle , |\omega^B( 0) \rangle ]. 
-\end{multline}
+\end{equation}
 Thus a lower bound on $C^D[ |\omega^D(1) \rangle , |\omega^D( 0) \rangle ]$ will give a
 lower bound on $C^B[ |\omega^B(1) \rangle , |\omega^B( 0) \rangle ]$.
 
@@ -6276,18 +6320,18 @@ lower bound on $C^B[ |\omega^B(1) \rangle , |\omega^B( 0) \rangle ]$.
 Let the product state $|\omega^D(0) \rangle $ be
 $|\omega^C \rangle  \otimes |\omega^B \rangle $ where
 \begin{subequations}
-  \begin{multline}
+  \begin{equation}
 \label{productstate3}
 |\omega^C \rangle  = 
 d^C_f( p_{n+m-1}) ... d^C_f( p_m) |\Omega^C \rangle 
-  \end{multline}
-  \begin{multline}
+  \end{equation}
+  \begin{equation}
     \label{productstate4}
     |\omega^B \rangle  = 
 d_f( p_{m-1}) ... d_f( p_0) 
     d_{\bar{f}}( q_{m - 1}) ... d_{\bar{f}}( q_0) \times \\
 d_b( r_{\ell-1}) ... d_b( r_0) |\Omega^B \rangle .
-\end{multline}
+\end{equation}
 \end{subequations}
 for $d_f( p_i)$, $d_{\bar{f}}( q_i)$ and $d_b( r_i)$ from Eq. (\ref{productstate2}),
 and $d_f^C( p_i)$ constructed from $d_f( p_i)$ of Eq. (\ref{productstate2})
