--- a/2105.04545/branching1.tex
+++ b/2105.04545/branching1.tex
@@ -751,11 +751,11 @@ Eqs. (\ref{complexity}) and (\ref{cpsi1}) immediately yield
 a formula for the complexity of the tensor product $|\chi \rangle  \otimes |\phi \rangle $ of a pair of states
 localized on regions $R_{\chi}$ and $R_{\phi}$ sufficiently distant from each other. 
 For this case we have
-\begin{multline}
+\begin{equation}
 \label{ctensor}
-C( |\chi \rangle  \otimes |\phi \rangle )^2 = \\
+C( |\chi \rangle  \otimes |\phi \rangle )^2 = 
 C( |\chi \rangle  \otimes |\Omega_{\phi} \rangle  )^2 + C( |\Omega_{\chi} \rangle  \otimes |\phi \rangle )^2,
-\end{multline}
+\end{equation}
 where $|\Omega_{\chi} \rangle $ and $|\Omega_{\phi} \rangle $ are the vacuum states on regions $R_{\chi}$
 and $R_{\phi}$, respectively. For sufficiently 
 distant $R_{\chi}$ and $R_{\phi}$, the optimal trajectories 
@@ -989,10 +989,10 @@ For any $|\psi \rangle  \in \mathcal{H}$ let
  $ |\psi \rangle  = \sum_i |\psi_i \rangle $
 be a candidate orthogonal decomposition into branches.
 We define the net complexity $Q( \{|\psi_i \rangle \})$ of this decomposition to be
-\begin{multline}\label{defQ} 
-Q( \{|\psi_i \rangle \})  =  \sum_i \langle \psi_i | \psi_i \rangle  [C( |\psi_i \rangle )]^2 - \\
+\begin{equation}\label{defQ} 
+Q( \{|\psi_i \rangle \})  =  \sum_i \langle \psi_i | \psi_i \rangle  [C( |\psi_i \rangle )]^2 - 
  b \sum_i \langle \psi_i | \psi_i \rangle  \ln( \langle \psi_i |\psi_i \rangle ),
-\end{multline} 
+\end{equation} 
 with branching threshold $b > 0$. For any choice of $b$, the branch
 decomposition of $|\psi \rangle $ is defined to be the $\{|\psi_i \rangle  \}$ which minimizes
 $Q(\{|\psi_i \rangle  \})$. The first term in Eq. (\ref{defQ}) is the mean squared complexity
@@ -1015,10 +1015,10 @@ $Q( \{|\psi_i \rangle \})$ is
 <bounded from above.
 Any $|\psi \rangle $ with fermion number $n$ can be expressed as a linear
 combination of a finite set of product states of the form
-\begin{multline}
+\begin{equation}
 \label{particlesatpoints}
-|\{x_j, s_j\}, \{y_k\} \rangle  = \\ \prod_{0 \le j < n} \Psi^{\dagger}( x_j, s_j) \prod_{0 \le k < m} \Phi^{\dagger}( y_k) |\Omega \rangle .
-\end{multline}
+|\{x_j, s_j\}, \{y_k\} \rangle  = \prod_{0 \le j < n} \Psi^{\dagger}( x_j, s_j) \prod_{0 \le k < m} \Phi^{\dagger}( y_k) |\Omega \rangle .
+\end{equation}
 For this decomposition all $C( |\psi_i \rangle )$ are 0
 and the second term in Eq. (\ref{defQ})
 \begin{multline}
@@ -1198,10 +1198,10 @@ the split are
  \langle \phi|\phi \rangle \{[C( |\phi \rangle )]^2 - b \ln(  \langle  \phi | \phi \rangle \}.
 \end{equation}
 The terms from $|\phi_0 \rangle $, $|\phi_1 \rangle $ after the split can be written in the form
-\begin{multline}\label{aftersplit}
- \langle \phi|\phi \rangle \{ \rho [C( |\phi_0 \rangle )]^2 + ( 1 - \rho) [C( |\phi_1 \rangle )]^2 - \\
+\begin{equation}\label{aftersplit}
+ \langle \phi|\phi \rangle \{ \rho [C( |\phi_0 \rangle )]^2 + ( 1 - \rho) [C( |\phi_1 \rangle )]^2 - 
 b \rho \ln( \rho) - b ( 1 - \rho) \ln( 1 - \rho)  - b \ln(  \langle  \phi| \phi \rangle ]\},
-\end{multline}
+\end{equation}
 for $\rho$ defined by
 \begin{equation}
     \label{defofrho}
@@ -1440,7 +1440,7 @@ However,
 and therefore
 \begin{multline}
   \label{boundonki}
-  \mathrm{Tr}_{xy}( \hat{k}_{ixy}^2) = \mathrm{Tr}_{xy}( P_{ixy} h_{xy} P_{ixy} h_{xy}P_{ixy}) \le \\
+  \mathrm{Tr}_{xy}( \hat{k}_{ixy}^2) = \mathrm{Tr}_{xy}( P_{ixy} h_{xy} P_{ixy} h_{xy}P_{ixy}) \le 
   \mathrm{Tr}_{xy} (P_{xy} h_{xy} P_{xy} h_{xy} P_{xy}) = \\
   \mathrm{Tr}_{xy}( \hat{k}_{xy}^2).
 \end{multline}
@@ -1470,11 +1470,11 @@ implies
 \end{equation}
 A further iteration of the argument leading to Eq. (\ref{complexityincrementx})
 then yields
-\begin{multline}
+\begin{equation}
   \label{complexityincrementbound1}
-  C( |\phi_i(t) \rangle ) - C(|\phi_i(t_0) \rangle ) < \\
+  C( |\phi_i(t) \rangle ) - C(|\phi_i(t_0) \rangle ) < 
   C( |\phi(t) \rangle ) - C(|\phi(t_0) \rangle ) + \epsilon.
-\end{multline}
+\end{equation}
 
 
 
@@ -1621,11 +1621,11 @@ $z_{10} |\phi_0 \rangle $ in place of $|\phi_0 \rangle $ and
 $z_{11} |\phi_1 \rangle $ in place of $|\phi_1 \rangle $,
 we obtain for $t > t_0$ and $i$ and $j$
 and combination of 0 and 1
-\begin{multline}
+\begin{equation}
   \label{complexityincrementbound2}
-  C( |\phi_i(t) \rangle ) - C(|\phi_i(t_0) \rangle ) < \\
+  C( |\phi_i(t) \rangle ) - C(|\phi_i(t_0) \rangle ) < 
   C( |\phi_j'(t) \rangle ) - C(|\phi_j'(t_0) \rangle ) + \epsilon,
-\end{multline}
+\end{equation}
 since for any complex number $z$ and vector $|\phi \rangle $
 \begin{equation}
   \label{scaleinv}
@@ -1679,14 +1679,14 @@ the complexities satisfy
  b \rho \ln( \rho) - b ( 1 - \rho) \ln( 1 - \rho),
 \end{multline}
 where $\rho, \rho'$, both time independent, are defined by
-\begin{multline}
+\begin{equation}
     \label{rho2}
-     \langle  \phi_0(t_2) | \phi_0(t_2) \rangle  = \\ \rho ( \langle  \phi_0(t_2) | \phi_0(t_2) \rangle  +  \langle \phi_1(t_2)|\phi_1(t_2) \rangle ),
-\end{multline}
-\begin{multline}
+     \langle  \phi_0(t_2) | \phi_0(t_2) \rangle  =  \rho ( \langle  \phi_0(t_2) | \phi_0(t_2) \rangle  +  \langle \phi_1(t_2)|\phi_1(t_2) \rangle ),
+\end{equation}
+\begin{equation}
     \label{rho2prime}
-     \langle  \phi_0(t_2)' | \phi_0(t_2)' \rangle  = \\ \rho' ( \langle  \phi_0(t_2)' | \phi_0(t_2)' \rangle  +  \langle \phi_1(t_2)'|\phi_1(t_2)' \rangle ).
-\end{multline}
+     \langle  \phi_0(t_2)' | \phi_0(t_2)' \rangle  =  \rho' ( \langle  \phi_0(t_2)' | \phi_0(t_2)' \rangle  +  \langle \phi_1(t_2)'|\phi_1(t_2)' \rangle ).
+\end{equation}
 
 For $|\phi_0 \rangle , |\phi_1 \rangle $
 to jump to
@@ -1715,11 +1715,11 @@ with the definitions
   \end{eqnarray}
 \end{subequations}
 We can then expand $p(t)$ as a sum of three terms
-\begin{multline}
+\begin{equation}
   \label{defq1}
-  q( t_0) = \rho' D'_0(t_0)^2 + (1 - \rho') D'_1(t_0)^2 -\\
+  q( t_0) = \rho' D'_0(t_0)^2 + (1 - \rho') D'_1(t_0)^2 -
   \rho D_0(t_0)^2 - (1 - \rho) D_1(t_0)^2,
-\end{multline}
+\end{equation}
 \begin{multline}
   \label{defr1}
   r( t_0) = 2\rho' D'_0(t)C(|\phi'_0(t_0) \rangle ) + \\
@@ -1849,10 +1849,10 @@ rotation angles of Eq. (\ref{thetabound}) becomes
 
 Similarly, as a consequence of the fermion number of $C( |\psi^{out} \rangle )$,
 the bound in Eq. (\ref{psiprojectionbound}) becomes 
-\begin{multline}
+\begin{equation}
 \label{psiprojectionboundscattering}
-\sum_{x \in D^e, y \in D^o}  \langle \psi(\nu)| [I - z^0(x,y)]|\psi(\nu) \rangle  \\ \le 6(n_{\mathcal{Q}} + n_{\mathcal{R}}).
-\end{multline}
+\sum_{x \in D^e, y \in D^o}  \langle \psi(\nu)| [I - z^0(x,y)]|\psi(\nu) \rangle  \le 6(n_{\mathcal{Q}} + n_{\mathcal{R}}).
+\end{equation}
 
 The net result of these two changes is that the bound of Eq. (\ref{lowerb}) becomes
 \begin{equation}
@@ -1922,11 +1922,11 @@ Let $|\psi \rangle $ be the state for a 2-fermion system with Gaussian wave func
 \label{gaussianstate}
 g(X) &=&  \frac{1}{R^\frac{3}{2} \pi^\frac{3}{4}} \exp( -\frac{|X|^2}{2R^2}), 
 \end{eqnarray}
-\begin{multline}
+\begin{equation}
 \label{cmstate}
-|\psi(X) \rangle  =  \sum_{x_0 + x_1 = 2X, s_0, s_1}[ \phi(x_0 - x_1, s_0, s_1) \times \\
+|\psi(X) \rangle  =  \sum_{x_0 + x_1 = 2X, s_0, s_1}[ \phi(x_0 - x_1, s_0, s_1) \times 
  \Psi^\dagger( x_0, s_0) \Psi^\dagger(x_1, s_1)] |\Omega \rangle ,
-\end{multline}
+\end{equation}
 \end{subequations}
 where $R$ is some large constant,
 the wave function $\phi(x, s_0, s_1)$ is antisymmetric
@@ -1986,11 +1986,11 @@ of Eq. (\ref{newschmidt}) be
 |\omega_x \rangle  = \sum_{j = 1, 2} \lambda_{jx} |\phi_{jx} \rangle  |\chi_{jx} \rangle .
 \end{equation}
 Eqs. (\ref{netstate}), (\ref{cmstate}) and (\ref{antisymm}) then imply
-\begin{multline}
+\begin{equation}
 \label{cmstate1}
-|\omega_x \rangle  = 2 g(x) \sum_{y, s_0, s_1} [\phi(x -y, s_0, s_1) \times \\
+|\omega_x \rangle  = 2 g(x) \sum_{y, s_0, s_1} [\phi(x -y, s_0, s_1) \times
 \Psi^{\dagger}(x,s_0)\Psi^{\dagger}(y,s_1) ]  |\Omega \rangle ,
-\end{multline}
+\end{equation}
 and therefore
 \begin{equation}
 \label{omeganorm0}
@@ -2053,10 +2053,10 @@ the matrix element $ \langle p_0, s_0, p_1, s_1| \psi \rangle $, for $\phi( x, s
 lattice scale,
 has the factored form
 \begin{subequations}
-\begin{multline}
+\begin{equation}
 \label{psiplanewave}
- \langle p_0, s_0, p_1, s_1| \psi \rangle  = \\2 \hat{g}( p_0 + p_1) \hat{\phi}( \frac{p_0 - p_1}{2}, s_0, s_1),
-\end{multline}
+ \langle p_0, s_0, p_1, s_1| \psi \rangle  = 2 \hat{g}( p_0 + p_1) \hat{\phi}( \frac{p_0 - p_1}{2}, s_0, s_1),
+\end{equation}
 \begin{equation}
 \label{ghat}
 \hat{g}( p) = (8B)^{\frac{-3}{2}} \sum_x \exp( -ip \cdot x) g( x),
@@ -2475,7 +2475,7 @@ configuration.
 At some $t_1 > t_0$ the inequality in Eq. (\ref{splitcondition}) becomes
 first an equality
 \begin{multline}\label{splitcondition2}
-  [C( |\phi(t_1) \rangle )]^2 - \\
+  [C( |\phi(t_1) \rangle )]^2 - 
   \rho [C( |\phi_0(t_1) \rangle )]^2 - ( 1 - \rho) [C( |\phi_1(t_1) \rangle )]^2 = \\
 -b \rho \ln( \rho) - b ( 1 - \rho) \ln( 1 - \rho),
 \end{multline}
@@ -2490,7 +2490,7 @@ and branching occurs.
 Eq. (\ref{splitcondition2}) implies $b$ is given by
 \begin{multline}
   \label{splitcondition4}
-  b = \sigma^{-1} \{  [C( |\phi(t_1) \rangle )]^2 - \\
+  b = \sigma^{-1} \{  [C( |\phi(t_1) \rangle )]^2 -
   \rho [C( |\phi_0(t_1) \rangle )]^2 - ( 1 - \rho) [C( |\phi_1(t_1) \rangle )]^2 \}
 \end{multline}
 where $\sigma$ is
@@ -2507,7 +2507,7 @@ almost certainly increases from $t_1$ to $t_2$ and
 thus $b$ is bounded by
 \begin{multline}
   \label{splitcondition5}
-  b \le \sigma^{-1}  \{ [C( |\phi(t_2) \rangle )]^2 - \\
+  b \le \sigma^{-1}  \{ [C( |\phi(t_2) \rangle )]^2 - 
   \rho [C( |\phi_0(t_2) \rangle )]^2 - ( 1 - \rho) [C( |\phi_1(t_2) \rangle )]^2 \}.
 \end{multline}
 
@@ -3257,10 +3257,10 @@ with $c_0$ independent of $m, n$ and $V$.
 
 In Appendix \ref{app:upperboundr} we prove an
 upper bound of almost the same form as the non-relativistic upper bound of Eq. (\ref{upperb})
-\begin{multline}
+\begin{equation}
 \label{upperbr}
-C^B( |\psi^B \rangle ) \leq \\ c_1 \sqrt{m n V} + c_2 m n^2 + c_3 m n + c_4\sqrt{mn} r,
-\end{multline}
+C^B( |\psi^B \rangle ) \leq c_1 \sqrt{m n V} + c_2 m n^2 + c_3 m n + c_4\sqrt{mn} r,
+\end{equation}
 where $c_1, c_2, c_3$ and $c_4$ are independent of $m, n$ and $V$.
 The distance $r$ is given by
 \begin{equation}
@@ -4066,11 +4066,11 @@ by the finite union
 where $c(s)$ is the set of $s'$ each consisting of
 exactly one of
 the events in $s$ but with branch index reversed
-\begin{multline}
+\begin{equation}
   \label{cofs}
-  c[\{ (e_0, i_0), ... (e_{n-1}), i_{n-1}) \}] = \\
+  c[\{ (e_0, i_0), ... (e_{n-1}), i_{n-1}) \}] =
   \Bigl\{ \{(e_0, \neg i_0)\}, ...\{ (e_{n-1},  \neg i_{n-1})\} \Bigr\}.
-\end{multline}
+\end{equation}
 
 In addition, for any $s, s' \in S$,
 \begin{equation}
@@ -4367,12 +4367,12 @@ to give
 for a phase factor $\xi$.
 Since all $k(\nu)$ conserve fermion number, $|\omega \rangle $ according to
 Eq. (\ref{productstate}) must have the form
-\begin{multline}
+\begin{equation}
 \label{productstate1}
 |\omega \rangle  = 
-d_f^\dagger( p_{n-1}) ... d_f^\dagger( p_0) \times \\
+d_f^\dagger( p_{n-1}) ... d_f^\dagger( p_0) \times
 d_b^\dagger( q_{m-1}) ... d_b^\dagger( q_0) |\Omega \rangle ,
-\end{multline}
+\end{equation}
 for some number of bosons $m$.
 
 We now divide the lattice $L$ into a collection
@@ -4661,11 +4661,11 @@ the support of $p^1_i(x,s)$ we have
 The piece $|\hat{\omega}( 0) \rangle $  of $|\omega( 0) \rangle $ with fermion number
 $n_0$ on $T_\ell$ and $n_1$ outside $T_\ell$ 
 is given by
-\begin{multline}
+\begin{equation}
     \label{defpiecewithn0n1}
-    |\hat{\omega}(0) \rangle  = \\
+    |\hat{\omega}(0) \rangle  =
     \sum_u [\bigotimes_{i \in u} |p^0_i \rangle  \bigotimes_{ j \in z - u } |p^1_j \rangle  ]\bigotimes_{i \notin z} |p_i \rangle ,
-\end{multline}
+\end{equation}
 where the sum is over all $r$ element subsets $u \subset z$.
 
 The vector $[ \lambda^T_{j\ell}(0) ]$ corresponding to
@@ -4809,19 +4809,19 @@ construct the density matrix $\rho(\nu + \delta \nu)$ by
 a partial trace over $\mathcal{R}_{\ell}$, 
 using the basis for $\mathcal{R}_{\ell}$
 from the Schmidt decomposition in Eq. (\ref{defomegat}) of $|\omega(\nu) \rangle $ at $t$
-\begin{multline}
+\begin{equation}
 \label{defrho}
 \rho(\nu + \delta \nu) = 
-\sum_j [ \langle  \chi_{j\ell}(\nu)|\omega(\nu + \delta \nu) \rangle  \times \\ \langle \omega(\nu + \delta \nu)|\chi_{j\ell}(\nu) \rangle ].
-\end{multline} 
+\sum_j [ \langle  \chi_{j\ell}(\nu)|\omega(\nu + \delta \nu) \rangle  \times \langle \omega(\nu + \delta \nu)|\chi_{j\ell}(\nu) \rangle ].
+\end{equation} 
 An eigenvector decomposition of $\rho(\nu + \delta \nu)$ exposes
 the $\lambda_{j\ell}(\nu + \delta \nu)$
-\begin{multline}
+\begin{equation}
 \label{rhodeltat}
 \rho(\nu + \delta \nu) = 
-\sum_j [\lambda_{j\ell}( \nu + \delta \nu)^2 \times \\
+\sum_j [\lambda_{j\ell}( \nu + \delta \nu)^2 \times
  |\phi_{j\ell}(\nu + \delta \nu) \rangle  \langle \phi_{j\ell}( \nu + \delta \nu)|].
-\end{multline}
+\end{equation}
 
 
 A power series expansion through first order in 
@@ -4832,12 +4832,12 @@ then gives for $\mu_{j\ell}(\nu)$ of Eq. (\ref{mudeltat})
 \mu_{j\ell}(\nu) = \sum_k r_{jk\ell}(\nu) \lambda_{k\ell}(\nu), 
 \end{equation}
 for the rotation matrix $r_{jk\ell}(\nu)$
-\begin{multline}
+\begin{equation}
 \label{rijp}
 r_{jk\ell}(\nu) = 
- -\operatorname{Im}[  \langle \phi_{j\ell}(\nu)| \langle \chi_{j\ell}(\nu)| \\
+ -\operatorname{Im}[  \langle \phi_{j\ell}(\nu)| \langle \chi_{j\ell}(\nu)|
 g_{\ell}(\nu)|\phi_{k\ell}(\nu) \rangle |\chi_{k\ell}(\nu) \rangle ].
-\end{multline}
+\end{equation}
 
 
 
@@ -4902,11 +4902,11 @@ Since the  $|\phi_{j\ell}(\nu) \rangle $ are orthonormal,
 $g^b(x,y,\nu)$ is Hermitian
 and the $\lambda_{k\ell}(\nu)$ are real
 we have
-\begin{multline}
+\begin{equation}
 \label{isup01}
 \operatorname{Im}\{
- \langle \phi_{j\ell}(\nu)|\phi_{k\ell}(\nu) \rangle \\ \langle \chi_{j\ell}(\nu)|g^b(x,y,\nu)|\chi_{k\ell}(\nu) \rangle  \lambda_{k\ell}(\nu)\} = 0.
-\end{multline}
+ \langle \phi_{j\ell}(\nu)|\phi_{k\ell}(\nu) \rangle \langle \chi_{j\ell}(\nu)|g^b(x,y,\nu)|\chi_{k\ell}(\nu) \rangle  \lambda_{k\ell}(\nu)\} = 0.
+\end{equation}
 Eq. (\ref{musupi}) for $i = 0$ can then be turned into
 \begin{multline}
 \label{musup01}
@@ -4935,10 +4935,10 @@ $\mathcal{H}^b_x \otimes \mathcal{H}^b_y$
 and therefore all eigenvalues bounded by 1.
 Eqs. (\ref{zprojection}), (\ref{defthetai}), (\ref{musup01}), (\ref{schmidt3}), and
 (\ref{projsq}) then give
-\begin{multline}
+\begin{equation}
 \label{theta0bound}
-[\theta^0_{\ell}(x,y,\nu)]^2 \le \\ [a^0(x,y,\nu)]^2  \langle  \omega(\nu)|[I - z^{0f}(x,y)]|\omega(\nu) \rangle .
-\end{multline}
+[\theta^0_{\ell}(x,y,\nu)]^2 \le [a^0(x,y,\nu)]^2  \langle  \omega(\nu)|[I - z^{0f}(x,y)]|\omega(\nu) \rangle .
+\end{equation}
 
 
 For $\mu^1_{j\ell}(x,y,\nu)$, since $z^1(x,y,\nu)$ is nonzero only on the
@@ -5123,24 +5123,24 @@ on $|\omega \rangle  = |\omega_0 \rangle $.
 
 Let $k_{0}$ acting on $\mathcal{H}_{x_{00}} \otimes \mathcal{H}_{x_{01}}$
 have matrix elements
-\begin{multline}
+\begin{equation}
 \label{defk01}
- \langle  \Omega| \Psi( x_{00}, -1) \Psi( x_{01}, -1) k_0  \\
+ \langle  \Omega| \Psi( x_{00}, -1) \Psi( x_{01}, -1) k_0 
 \Psi^{\dagger}(x_{00},1) \Psi^{\dagger}( x_{01},1)|\Omega \rangle  = -i,
-\end{multline}
-\begin{multline}
+\end{equation}
+\begin{equation}
 \label{defk10}
  \langle  \Omega| \Psi(x_{00},1) \Psi( x_{01}, 1) k_0 
- \\ \Psi^{\dagger}(x_{00},-1) \Psi^{\dagger}( x_{01},-1)|\Omega \rangle  = i,
-\end{multline}
+ \Psi^{\dagger}(x_{00},-1) \Psi^{\dagger}( x_{01},-1)|\Omega \rangle  = i,
+\end{equation}
 and extend $k_0$ to $\mathcal{H}$ by Eq. (\ref{defhf}). 
 We then have
-\begin{multline}
+\begin{equation}
 \label{k00}
-\exp( i \theta_0 k_0) |\omega_0 \rangle  = \\
+\exp( i \theta_0 k_0) |\omega_0 \rangle  = 
 \sqrt{\frac{1}{m}} |\omega_0 \rangle  + 
 \sqrt{\frac{m - 1}{m}} \prod_{0 \le j < n} \Psi^{\dagger}( x_{0j}, s_{1j}) |\Omega \rangle ,
-\end{multline}
+\end{equation}
 where
 \begin{equation}
 \label{defarcsin}
@@ -5159,24 +5159,24 @@ s_{ij} & = & 1, j  >  i.
 
 Now let $k_{1}$ acting on $\mathcal{H}_{x_{01}} \otimes \mathcal{H}_{x_{02}}$
 have matrix elements
-\begin{multline}
+\begin{equation}
 \label{defk011}
- \langle  \Omega| \Psi( x_{01}, -1) \Psi( x_{02}, -1) k_1  \\
+ \langle  \Omega| \Psi( x_{01}, -1) \Psi( x_{02}, -1) k_1 
 \Psi^{\dagger}(x_{01},-1) \Psi^{\dagger}( x_{02}, 1)|\Omega \rangle  = -i,
-\end{multline}
-\begin{multline}
+\end{equation}
+\begin{equation}
 \label{defk101}
  \langle  \Omega| \Psi(x_{01},-1) \Psi( x_{02}, 1) k_1
- \\ \Psi^{\dagger}(x_{01},-1) \Psi^{\dagger}( x_{02},-1)|\Omega \rangle  = i,
-\end{multline}
+  \Psi^{\dagger}(x_{01},-1) \Psi^{\dagger}( x_{02},-1)|\Omega \rangle  = i,
+\end{equation}
 and extend $k_1$ to $\mathcal{H}$ by Eq. (\ref{defhf}).
 We then have
-\begin{multline}
+\begin{equation}
 \label{k001}
-\exp( i \theta_1 k_1) \exp( i \theta_0 k_0)|\omega_0 \rangle  = \\
+\exp( i \theta_1 k_1) \exp( i \theta_0 k_0)|\omega_0 \rangle  =
 \sqrt{\frac{1}{m}} |\omega_0 \rangle  +
 \sqrt{\frac{m - 1}{m}} \prod_{0 \le j < n} \Psi^{\dagger}( x_{0j}, s_{2j}) |\Omega \rangle ,
-\end{multline}
+\end{equation}
 for $\theta_1$ given by $\frac{\pi}{2}$.
 
 
@@ -5206,12 +5206,12 @@ and let $\theta_{n-1}$ be $\frac{\pi}{2}$.
 Applying $\exp(i \theta_{n-1} k_{n-1})$ to Eq. (\ref{k0n}),
 followed by a similar sequence of $\exp(i \theta_j k_j), n \le j < 2n -1$ acting on
 $\mathcal{H}_{x_{0(j-n+1)}} \otimes \mathcal{H}_{x_{1(j-n+1)}}$ gives
-\begin{multline}
+\begin{equation}
 \label{k02n}
-\exp( i \theta_{2n-2} k_{2n-2}) ... \exp( i \theta_0 k_0) |\omega_0 \rangle  = \\
+\exp( i \theta_{2n-2} k_{2n-2}) ... \exp( i \theta_0 k_0) |\omega_0 \rangle  =
 \sqrt{\frac{1}{m}} |\omega_0 \rangle  +
 \sqrt{\frac{m - 1}{m}} |\omega_1 \rangle 
-\end{multline}
+\end{equation}
 
 Multiplying Eq. (\ref{k02n}) by $\exp(i\theta_jk_j), 2n-1 \le j < 3n-2$ on
 $\mathcal{H}_{x_{1(j-2n+1)}} \otimes \mathcal{H}_{x_{1(j-2n +2)}}$, 
@@ -5227,11 +5227,11 @@ $\mathcal{H}_{x_{1(j-3n+2)}} \otimes \mathcal{H}_{x_{2(j-3n+2)}}$ gives
 
 The end result of a sequence of $2mn - m$ such steps is
 $|\chi \rangle $ of Eq. (\ref{defchi})
-\begin{multline}
+\begin{equation}
 \label{finalk}
-\exp( i \theta_{2mn-m-1} k_{2mn-m-1}) ... \exp( i \theta_0 k_0) |\omega_0 \rangle  = \\
+\exp( i \theta_{2mn-m-1} k_{2mn-m-1}) ... \exp( i \theta_0 k_0) |\omega_0 \rangle  =
 \sqrt{\frac{1}{m}} \sum_i |\omega_i \rangle .
-\end{multline}
+\end{equation}
 
 The $k_i$ and $\theta_i$ of Eq. (\ref{finalk}) have
 \begin{subequations}
@@ -5451,11 +5451,11 @@ we have
 \end{equation}
 with $m = 2^{p-1}$,
 given by
-\begin{multline}
+\begin{equation}
 \label{defupsilon12}
-|\upsilon_2 \rangle  = \\\frac{1}{2}\sum_{i = -2^{p-2},2^{p-1}} 
+|\upsilon_2 \rangle  = \frac{1}{2}\sum_{i = -2^{p-2},2^{p-1}} 
 \sum_{j = -2^{p-2},2^{p-2}}  \Psi^{\dagger}[ y(i,j), 1] |\Omega \rangle ,
-\end{multline}
+\end{equation}
 for $y(i,j)$ defined to be $y(i)$ displaced $j$ steps in lattice direction 2.
 Eqs. (\ref{defbark}) and (\ref{defbark1}) adapted to the fan-out in direction 2
 give $\bar{k}_j, 2^{p-2} < j \le 2^{p-1}$ each acting on twice as
@@ -5485,11 +5485,11 @@ yields
 \exp(i \frac{\pi}{2}\bar{ k}_m) ... \exp(i \frac{\pi}{2}\bar{ k}_1) |\upsilon_0 \rangle ,
 \end{equation}
 for $m =2^{p-1} + 2^{p-2}$, given by
-\begin{multline}
+\begin{equation}
 \label{defupsilon13}
-|\upsilon_3 \rangle  = \frac{1}{\sqrt{8}}\sum_{i = -2^{p-2},2^{p-1}} \\
+|\upsilon_3 \rangle  = \frac{1}{\sqrt{8}}\sum_{i = -2^{p-2},2^{p-1}}
 \sum_{j = -2^{p-2},2^{p-2}} \sum_{\ell = -2^{p-2},2^{p-2}}  \Psi^{\dagger}[ y(i,j, \ell), 1] |\Omega \rangle ,
-\end{multline}
+\end{equation}
 for $y(i,j, \ell)$ defined to be $y(i, j)$ displaced $\ell$ steps in lattice direction 3.
 
 Eqs. (\ref{defbark}) and (\ref{defbark1}) adapted to the fan-out in direction 3
@@ -5932,11 +5932,11 @@ such that
 h = i [ k, g].
 \end{equation}
 Combining Eqs. (\ref{combined}), (\ref{kinpminus1p}), (\ref{ginl}) and (\ref{hkg}) then gives
-\begin{multline}
+\begin{equation}
 \label{endresult}
-H_p( |\psi_0 \rangle , |\psi_1 \rangle , h) = \\ 
+H_p( |\psi_0 \rangle , |\psi_1 \rangle , h) = 
 U_0^\dagger \exp(-ik) U_2^\dagger i[k, g] U_2 \exp(ik) U_0,
-\end{multline}
+\end{equation}
 which completes the induction step and for $|\psi_0 \rangle $ and $|\psi_1 \rangle $ with $m$ of 0
 in Eqs. (\ref{psi0}) - (\ref{psi2}).
 
@@ -6502,22 +6502,22 @@ into itself and therefore conserves both $N^C$ and $N^B$.
 
   
 We then have
-\begin{multline}
+\begin{equation}
   \label{check}
-  M_x M_y g^D_{xy} = \sum_{mn} P^B_{m+n} f^B_{xy} M_{mn}, \\
-  = f^B_{xy} \sum_{mn}  M_{mn}, \\
+  M_x M_y g^D_{xy} = \sum_{mn} P^B_{m+n} f^B_{xy} M_{mn}
+  = f^B_{xy} \sum_{mn}  M_{mn}
   = f^B_{xy} M_x M_y,
-\end{multline}
+\end{equation}
 where the first line follows from by Eq. (\ref{projhbn})
 and the second follows because $M_{mn}$ maps onto
 $\mathcal{H}^B_{m+n}$ and $f^B_{xy}$ conserves $N_B$.
 Eqs. (\ref{masproduct}), (\ref{check}) and the induction hypothesis, Eq. (\ref{omegaw}) for
 $\nu'$, give
-\begin{multline}
+\begin{equation}
   \label{check1}
-  M \hat{g}^D_{xy} |\omega^D(\nu') \rangle  = \hat{f}^B_{xy} M|\omega^D(\nu') \rangle  \\
+  M \hat{g}^D_{xy} |\omega^D(\nu') \rangle  = \hat{f}^B_{xy} M|\omega^D(\nu') \rangle
   = \hat{f}^B_{xy} |\omega^B(\nu') \rangle ,
-\end{multline}
+\end{equation}
 which is Eq. (\ref{omegaw1}).
 
 In addition, since $M_{mn}^{-1}$ maps into $\mathcal{H}^D_{mn}$,
@@ -6527,11 +6527,11 @@ Eqs. (\ref{mxymn}) and (\ref{projhbn}) imply
   M_{m'n'} M_{mn}^{-1} = \delta_{m'm} \delta_{n'n} P^B_{m + n}.
 \end{equation}
 We then have
-\begin{multline}
+\begin{equation}
   \label{normeq}
-  \mathrm{Tr}^D_{xy} ( g^D_{xy})^2 = \sum_{mn} \mathrm{Tr}^B_{xy}[ P^B_{m +n} f^B_{xy}P^B_{m+n} f^B_{xy}] \\
+  \mathrm{Tr}^D_{xy} ( g^D_{xy})^2 = \sum_{mn} \mathrm{Tr}^B_{xy}[ P^B_{m +n} f^B_{xy}P^B_{m+n} f^B_{xy}]
   =  \sum_{mn} \mathrm{Tr}^B_{xy}[ P^B_{m +n} (f^B_{xy})^2]
-\end{multline}
+\end{equation}
 where the first line follows from Eqs. (\ref{fdxy}) and (\ref{mproducts})
 and the second holds because $f^B_{xy}$ conserves $N^B$.
 Since the index $s$ of $\Sigma_1(x,s)$ is in the range $0 \le s < 4$,
@@ -6546,11 +6546,11 @@ giving any value of $m + n$. Eq. (\ref{normeq}) then implies
 which is Eq. (\ref{normkw1}).
 
 Finally, $g^D_{xy}$ can be split into
-\begin{multline}
+\begin{equation}
   \label{fdfixedtraces}
-  g^D_{xy} = f^D_{xy} + \frac{1}{\sqrt{d_\mathcal{H}}} I_x \otimes f^D_y + \\
+  g^D_{xy} = f^D_{xy} + \frac{1}{\sqrt{d_\mathcal{H}}} I_x \otimes f^D_y + 
   \frac{1}{\sqrt{d_\mathcal{H}}} f^D_x  \otimes I_y + \frac{1}{d_\mathcal{H}} f^D I_x \otimes I_y,
-\end{multline}
+\end{equation}
 where
 \begin{subequations}
   \begin{eqnarray}
@@ -6566,11 +6566,11 @@ where
 \end{subequations}
 and $d_\mathcal{H}$ is the dimension of each $\mathcal{H}^D_x$.
 Eqs. (\ref{fdfixedtraces}) - (\ref{trgx}) imply
-\begin{multline}
+\begin{equation}
   \label{gxynorms}
   \mathrm{Tr}^D_{xy}(g^D_{xy})^2 = \mathrm{Tr}^D_{xy}(f^D_{xy})^2 + \mathrm{Tr}^D_y(f^D_y)^2 +
-  \\ \mathrm{Tr}^D_x(f^D_x)^2 + (f^D)^2.
-\end{multline}
+  \mathrm{Tr}^D_x(f^D_x)^2 + (f^D)^2.
+\end{equation}
 Eqs. (\ref{gxynorms}) and (\ref{normeq1}) imply $f^D_{xy}$ satisfies Eq. (\ref{normkw1}). For $d_\mathcal{H}$ large enough,
 Eqs. (\ref{fdfixedtraces}) and (\ref{check1}) imply $\hat{f}^D_{xy}$ satisfies Eq. (\ref{omegaw1}).
 
@@ -6764,12 +6764,12 @@ then leads to
 \mu_{j\ell}(\nu) = \sum_k r_{jk\ell}(\nu) \lambda_{k\ell}(\nu), 
 \end{equation}
 for the rotation matrix $r_{jk\ell}(\nu)$
-\begin{multline}
+\begin{equation}
 \label{rijp1}
 r_{jk\ell}(\nu) = 
- -\operatorname{Im}[  \langle \phi_{j\ell}(\nu)| \langle \chi_{j\ell}(\nu)| \\
+ -\operatorname{Im}[  \langle \phi_{j\ell}(\nu)| \langle \chi_{j\ell}(\nu)| 
 g^D_{\ell}(\nu)|\phi_{k\ell}(\nu) \rangle |\chi_{k\ell}(\nu) \rangle ],
-\end{multline}
+\end{equation}
 for $|\phi_{k\ell}(\nu) \rangle $ and $|\chi_{k\ell}(\nu) \rangle $ of Eq. (\ref{defomegat1})
 and $\mu_{j\ell}(\nu)$ of Eq. (\ref{mudeltat1}).
 
@@ -6826,14 +6826,14 @@ z^i(x,y,\nu)|\phi_{k\ell}(\nu) \rangle |\chi_{k\ell}(\nu) \rangle  \lambda_{k\el
 
 A duplicate of the proof of Eqs. (\ref{isup01}) - (\ref{theta1bound}) then yields
 \begin{subequations}
-\begin{multline}
+\begin{equation}
 \label{theta0boundr}
-[\theta^0_{\ell}(x,y,\nu)]^2 \le \\ [a^0(x,y,\nu)]^2  \langle  \omega(\nu)|[I - z^{0C}(x,y)]|\omega(\nu) \rangle ,
-\end{multline}
-\begin{multline}
+[\theta^0_{\ell}(x,y,\nu)]^2 \le  [a^0(x,y,\nu)]^2  \langle  \omega(\nu)|[I - z^{0C}(x,y)]|\omega(\nu) \rangle ,
+\end{equation}
+\begin{equation}
 \label{theta1boundr}
-[\theta^1_{\ell}(x,y,\nu)]^2 \le \\ [a^1(x,y,\nu)]^2  \langle  \omega(\nu)|[I - z^{0C}(x,y)]|\omega(\nu) \rangle ,
-\end{multline}
+[\theta^1_{\ell}(x,y,\nu)]^2 \le  [a^1(x,y,\nu)]^2  \langle  \omega(\nu)|[I - z^{0C}(x,y)]|\omega(\nu) \rangle ,
+\end{equation}
 \end{subequations}
 which combined with Eq. (\ref{thetasum1}) imply
 \begin{multline}
@@ -6890,11 +6890,11 @@ to $z^1(x, y, \nu)$. It follows that
 
 Assembling Eqs. (\ref{thetafinal2}), (\ref{psiprojectionbound1}), (\ref{boundonm})
 and (\ref{kfromar}) gives
-\begin{multline}
+\begin{equation}
 \label{kboundr}
-\parallel k^D(\nu) \parallel^2 \ge \frac{1}{2} \sum_{x \in E, y \notin E} [|a^0(x,y,\nu)| + |a^1(x,y,\nu)|]^2 \\
+\parallel k^D(\nu) \parallel^2 \ge \frac{1}{2} \sum_{x \in E, y \notin E} [|a^0(x,y,\nu)| + |a^1(x,y,\nu)|]^2
 \ge \frac{1}{136 n} [\sum_{\ell} |\theta_{\ell}(\nu)|] ^ 2
-\end{multline}
+\end{equation}
 Eq. (\ref{thetaboundsum4}) then implies
 \begin{equation}
 \label{kbound1r}
@@ -7068,12 +7068,12 @@ Then from $k^B_{n-1}, ... k^B_{n - 1 +p}, 3n - 2 \ge p < 48 n^2 + 159 n$,
 in place of
 $k_{n-1}, ... k_{2n-2}$ of
 Eqs. (\ref{defknm1}) - (\ref{k02n}) we obtain
-\begin{multline}
+\begin{equation}
 \label{k02n1}
-\exp( i \theta_{n-1 + p} k^B_{n-1 + p}) ... \exp( i \theta_0 ^Bk^B_0) |\omega^B_0 \rangle  = \\
+\exp( i \theta_{n-1 + p} k^B_{n-1 + p}) ... \exp( i \theta_0 ^Bk^B_0) |\omega^B_0 \rangle  =
 \sqrt{\frac{1}{m}} |\omega^B_0 \rangle  +
 \sqrt{\frac{m -1}{m}} |\omega^B_1 \rangle ,
-\end{multline}
+\end{equation}
 with $\parallel k^B_i \parallel, |\theta_i|$ satisfying Eqs. (\ref{normfinalk1}) and
 (\ref{normfinaltheta1})
 and incremental cost
@@ -7094,11 +7094,11 @@ Following Eqs. (\ref{k04n}) and (\ref{finalk}), we now
 apply copies of the maps
 of Eqs. (\ref{k0n1}) and (\ref{k02n1}) along the $x^2$ direction
 geodesics at $x_{10}, ... x_{m0}$ with end result
-\begin{multline}
+\begin{equation}
 \label{finalk1}
-\exp( i \theta^B_q k^B_q) ... \exp( i \theta^B_0 k^B_0) |\omega^B_0 \rangle  = \\
+\exp( i \theta^B_q k^B_q) ... \exp( i \theta^B_0 k^B_0) |\omega^B_0 \rangle  =
 \sqrt{\frac{1}{m}} \sum_i |\omega^B_i \rangle .
-\end{multline}
+\end{equation}
 where all $k^B_i$ satisfy Eq. (\ref{normfinalk1}),  $\theta^B_i$
 satisfy Eq. (\ref{normfinaltheta1}) and
 \begin{equation}
@@ -7243,10 +7243,10 @@ steps to traverse a segments of length $\frac{d}{2^r}$ is
 bounded by $ 24 \frac{d}{\rho 2^r} + 63$.
 A repetition of the derivation of Eq. (\ref{iterationell}) 
 then yields
-\begin{multline}
+\begin{equation}
 \label{iterationellr}
-C^B( |\upsilon^B_{3 r} \rangle , |\upsilon^B_{3 r - 3} \rangle ) < \\ (3+\sqrt{2})( 24 \frac{d}{\rho 2^r} + 63) 2^{\frac{3r-3}{2}} \pi.
-\end{multline}
+C^B( |\upsilon^B_{3 r} \rangle , |\upsilon^B_{3 r - 3} \rangle ) < (3+\sqrt{2})( 24 \frac{d}{\rho 2^r} + 63) 2^{\frac{3r-3}{2}} \pi.
+\end{equation}
 
 The last step in the fan-out process consists of splitting 
 the piece of $|\upsilon^B_{3q} \rangle $ at each $x(y)$ into $n(y)$ equally weighted
@@ -7303,10 +7303,10 @@ C^B( |\psi^B \rangle , |\phi^B \rangle ) \le  c_1 \sqrt{mnV}.
 \end{equation}
 From Eqs. (\ref{deltacr}) and (\ref{deltac0r}), it follows that for a product state
 $|\omega^B \rangle $ we have
-\begin{multline}
+\begin{equation}
 \label{psiomegar}
-C^B(|\psi^B \rangle ,|\omega^B \rangle ) \le \\ c_1 \sqrt{ mnV} + c_2 m n^2 + c_3 mn + c_4\sqrt{mn} r, 
-\end{multline}
+C^B(|\psi^B \rangle ,|\omega^B \rangle ) \le c_1 \sqrt{ mnV} + c_2 m n^2 + c_3 mn + c_4\sqrt{mn} r, 
+\end{equation}
 for $c_1$ of Eq. (\ref{finalc1}), $r$ of  Eq. (\ref{defsbar1r}) and 
 \begin{subequations}
 \begin{eqnarray}
