--- a/1210.2353/Catresubmission.tex
+++ b/1210.2353/Catresubmission.tex
@@ -15,14 +15,14 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7.0in, 10.0in}, left=.6in, right=.6in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.6in, right=.6in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/minion_sum}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
