--- a/1612.07308/arxiv-varenna-qbism.tex
+++ b/1612.07308/arxiv-varenna-qbism.tex
@@ -1,13 +1,10 @@
-\documentclass[aps,pra,superscriptaddress,10pt,tightenlines,twocolumn,nofootinbib]{revtex4}
+\documentclass[aps,pra,superscriptaddress,12pt,tightenlines,nofootinbib]{revtex4-2}
 %\documentclass{cimento}
 \usepackage{amsmath,amsthm,amssymb,verbatim}
 %\usepackage[mathscr]{eucal}
 \usepackage{graphicx}
-\usepackage{lscape}
 \usepackage{url}
-\usepackage{hyperref}
 \usepackage{xifthen} % provides \isempty test
-\hypersetup{colorlinks=true,urlcolor=blue}
 
 \newcommand{\tr}[1]{{\ensuremath{\hbox{tr}\, #1}}}
 \newcommand{\ket}[1]{{\ensuremath{\left| #1 \right\rangle}}}
@@ -28,6 +25,48 @@
 \newcommand{\booktitle}{\textsl}
 %\newcommand{\href}[2]{{#2}}
 \newcommand{\hrefdoi}[2]{\href{https://dx.doi.org/#1}{#2}}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 
 
