--- a/1612.07308/arxiv-varenna-qbism.tex
+++ b/1612.07308/arxiv-varenna-qbism.tex
@@ -87,15 +87,20 @@ This article situates QBism among other well-known interpretations of quantum me
 \maketitle
 
 
+\newpage
+
 \section{Introduction}
 
 \begin{flushright}
 \baselineskip=13pt
 \parbox{2.8in}{\baselineskip=13pt\small
-Chauncey Wright a nearly forgotten philosopher of real merit, taught me when young that I must not say {\it necessary\/} about the universe, that we don't know whether anything is necessary or not.  So I describe myself as a {\it bet\/}tabilitarian.  I believe that we can {\it bet\/} on the behavior of the universe in its \underline{contact} with us. [Our underlining; his italics.]}
-\medskip\\
+Chauncey Wright a nearly forgotten philosopher of real merit, taught me when young that I must not say {\it necessary\/} about the universe, that we don't know whether anything is necessary or not.  So I describe myself as a {\it bet\/}tabilitarian.  I believe that we can {\it bet\/} on the behavior of the universe in its {\bf contact} with us}
+\medskip
+
 \small --- Oliver Wendell Holmes, Jr.
 \end{flushright}
+
+\bigskip
 
 Quantum physics works.  But why?
 
@@ -224,8 +229,6 @@ So, what is the overarching story of QBism, and what does the QB stand for anywa
 And that is it---{\it that\/} is QBism!  To be a QBist is to use quantum theory to be a ``better bettabilitarian'' in this world in which we are all immersed and which we shape with our every action.
 
 Let us unroll this big idea.
-
-\vfill
 
 \section{Exactly How Quantum States Fail To Exist}
 \begin{flushright}
