--- a/0902.3005/Paper2a.tex
+++ b/0902.3005/Paper2a.tex
@@ -1,7 +1,13 @@
 \documentclass[12pt]{article}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[full]{textcomp}
+\usepackage[]{XCharter}% lining figures in math, osf in text
+\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
+\usepackage[cal=cm,scr=esstix]{mathalpha}
+
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
@@ -45,8 +51,6 @@ bookmarksopenlevel=10
 %\pdfbookmark[1]{Introduction}{Introduction}
 
 \usepackage{epsfig}
-\usepackage{amsmath}
-\usepackage{amssymb}
 %
 \begin{document}
 \begin{center}
