--- a/1703.11003/Boughn-Bell-arXiv.tex
+++ b/1703.11003/Boughn-Bell-arXiv.tex
@@ -12,7 +12,7 @@
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage[cal=cm,scr=esstix]{mathalpha}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.7in, bottom=1in]{geometry}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
