--- a/helpers/fixarxiv-charter.tex
+++ b/helpers/fixarxiv-charter.tex
@@ -13,6 +13,7 @@
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/fix-underbrace.tex}
+\input{../helpers/cmrsum}
 
 \usepackage[small]{titlesec}
 \usepackage{cite}
@@ -40,5 +41,3 @@ bookmarksopenlevel=10
 %\input{../helpers/psu-plain-titles.tex}
 %\input{../helpers/psu-sc-headers.tex}
 %\input{../helpers/fix-revtex-12.tex}
-%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
-%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
