--- a/2003.03395/main.tex
+++ b/2003.03395/main.tex
@@ -16,7 +16,7 @@
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
